added new files and images

--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>Mama Afrika!</title>
   </head>
    
-     <body>
+<body>
+<section>
  <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
@@ -25,16 +30,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
-</html>
-
-
-
-
-
-
-
-
+  
+<span><a href="gallery.html" class="tooltip-test" title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> and <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
 <div class="jumbotron">
   <h1 class="display-4">Mama Afrika</h1>
   <p class="lead">Africa designers 
@@ -46,17 +43,15 @@ In the West African, and Central Africa they have a specific fabric like sarong,
   <p>
 On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way </p>
   <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
+ 
 </div>
+<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+</div></span>
 
-
-
-
-
-
-<footer class=" footer container-fluid">
+ <footer class="footer col container-fluid">
    <div id="footer-details" class="row">   
-      <div class="col-sm-4">
-        <h5 class="uppercase general-sub">Social</h5>
+      <div class="col-md-6 col-sm-4">
+        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
@@ -71,45 +66,18 @@ On occasions and in many ways either symbolically or for practical reasons. Afri
               </a>
            </li>
            <li class="list-inline-item">
-              <a target="_blank" href="https://www.linkedin.com/in/mama-afrika-92579b1b7/">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                  <span class="sr-only">linkedin</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="https://www.pinterest.ie/suezett31/pins/">
-                <i class="fa fa-pinterest" aria-hidden="true"></i>
-                  <span class="sr-only">Pinterest</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
               </a>
            </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="https://www.youtube.com/">
-                <i class="fa fa-youtube" aria-hidden="true"></i>
-                  <span class="sr-only">YouTube</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="#">
-                <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                  <span class="sr-only">Whatsapp</span>
-              </a>
-           </li>
          </ul>
       </div>
 </footer>    
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-   </div></span>
-     <!-- Optional JavaScript -->
+ <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
-
+ </body>
 </html>
