--- a/about.html
+++ b/about.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -94,11 +98,10 @@
 </div>
 
 </section>
-
-<footer class=" col footer container-fluid">
+<footer class="footer container-fluid">
    <div id="footer-details" class="row">   
-      <div class="col-sm-4">
-        <h5 class="uppercase general-sub">Social</h5>
+      <div class="col-md-6 col-sm-4">
+        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
@@ -112,7 +115,6 @@
                   <span class="sr-only">twitter</span>
               </a>
            </li>
-
            <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
