--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -59,8 +62,8 @@
 </div>
 <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
-      <div class="col-sm-4">
-        <h5 class="uppercase general-sub">Social</h5>
+      <div class="col-md-6 col-sm-4">
+        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
@@ -75,33 +78,9 @@
               </a>
            </li>
            <li class="list-inline-item">
-              <a target="_blank" href="https://www.linkedin.com/in/mama-afrika-92579b1b7/">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-                  <span class="sr-only">linkedin</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="https://www.pinterest.ie/suezett31/pins/">
-                <i class="fa fa-pinterest" aria-hidden="true"></i>
-                  <span class="sr-only">Pinterest</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
               <a target="_blank" href="https://www.instagram.com/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span class="sr-only">Instagram</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="https://www.youtube.com/">
-                <i class="fa fa-youtube" aria-hidden="true"></i>
-                  <span class="sr-only">YouTube</span>
-              </a>
-           </li>
-           <li class="list-inline-item">
-              <a target="_blank" href="#">
-                <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                  <span class="sr-only">Whatsapp</span>
               </a>
            </li>
          </ul>
