--- a/product.html
+++ b/product.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
+  <!--Code institute video clip-->
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Mama Afrika!</title>
   </head>
     
@@ -17,9 +22,38 @@
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
   </a>
    </nav>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     </h1>
+
+
+
 <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+    <footer class="footer container-fluid">
+   <div id="footer-details" class="row">   
+      <div class="col-md-6 col-sm-4">
+        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
+         <ul class="list-inline social-links">
+           <li class="list-inline-item">
+              <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                  <span class="sr-only">Facebook</span>
+              </a>
+           </li>
+           <li class="list-inline-item">
+              <a target="_blank" href="https://twitter.com/home">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                  <span class="sr-only">twitter</span>
+              </a>
+           </li>
+           <li class="list-inline-item">
+              <a target="_blank" href="https://www.instagram.com/">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span class="sr-only">Instagram</span>
+              </a>
+           </li>
+         </ul>
+      </div>
+</footer>    
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
