--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
    </a>
    </nav>
       <div>
-        <h1 class="card-title">About us</h1>
+        <h1 class="card-title bg-color-button ">About us</h1>
            <div class="button"> 
                   <a href="index.html" target="_blank">Home</a>
                    <a href="products.html" target="_blank">Products</a>
@@ -53,17 +53,25 @@
                    <a href="contact.html" target="_blank">Contact us</a>
                </div>
           </div>
+  <hr class="my-4">
+  <p>
+          <h5> African fabric. 
+Each part of Africa has a specific type of Fabric that is worn in each country.
+In the West African, and Central Africa they have a specific fabric like sarong, 
+often worn by women and wrapped around the chest or waist, over the head as a headscarf,
+ or as a baby sling. Kitenges are like kangas and kikoy but are of a thicker cloth and have 
+ an edging along each side
+         </h5>
+On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the below sites </p>
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-               <button type="radio-button" class="btn btn-secondary">Design</button>
-                    <a class="radio-button" href="designs.html"></a>
-                <button type="button" class="btn btn-secondary">Artifacts</button>
-                    <a class="radio-button" href="artifacts.html"></a>
+              <a class="pr-3" href="designs.html">Design</a></button>
+               <a class="pr-3" href="designs.html">Artifacts</a></button>
+
         </div>
      </div>
  </div>
 <div>
       <div class="media text-left mt-3">
-      <a class="pr-3" href="designs.html"></a>
           <img class="mr-3" src="assets/images/africa.jpeg" class="rounded mx-auto d-block"alt="Generic placeholder image" id="africa">
           <div class="media-body">
           <h5 class="mt-0">Design</h5>
