--- a/designs.html
+++ b/designs.html
@@ -55,7 +55,7 @@
           </div>
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                <button type="radio-button" class="btn btn-secondary">Design</button>
-                    <a class="radio-button" href="products.html"></a>
+                    <a class="radio-button" href="gallery.html"></a>
                 <button type="button" class="btn btn-secondary">Artifacts</button>
                     <a class="radio-button" href="gallery.html"></a>
         </div>
@@ -133,5 +133,4 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
-
 </html>
