--- a/index.html
+++ b/index.html
@@ -34,14 +34,7 @@
 <span><a href="gallery.html" class="tooltip-test" title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> and <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
 <div class="jumbotron">
   <h1 class="display-4">Mama Afrika</h1>
-  <p class="lead">Africa designers 
-African fabric. 
-Each part of Africa has a specific type of Fabric that is worn in each country.
-In the West African, and Central Africa they have a specific fabric like sarong, often worn by women and wrapped around the chest or waist, over the head as a headscarf, or as a baby sling. Kitenges are like kangas and kikoy but are of a thicker cloth and have an edging along each side
-</p>
-  <hr class="my-4">
-  <p>
-On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way </p>
+  <p class="lead">Africa designers</p>
   <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
  
 </div>
