--- a/about.html
+++ b/about.html
@@ -38,34 +38,44 @@
 <div class="row">
     <div class="col">
 
-      <div class="col">
-     <nav class=" row col navbar navbar-light bg-light">
+<div class="col ">
+     <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
    </nav>
       <div>
-        <h1 class="card-title bg-color-button ">About us</h1>
+        <h1 class="card-title bg-color-button "><strong>About us</strong></h1>
            <div class="button"> 
-                  <a href="index.html" target="_blank">Home</a>
-                   <a href="products.html" target="_blank">Products</a>
-                   <a href="gallery.html" target="_blank">Gallery</a>
-                   <a href="contact.html" target="_blank">Contact us</a>
+                  <a href="index.html" target="_blank"><strong>Home</strong></a>
+                   <a href="products.html" target="_blank"><strong>Products</strong></a>
+                   <a href="gallery.html" target="_blank"><strong>Gallery</strong></a>
+                   <a href="contact.html" target="_blank"><strong>Contact us</strong></a>
                </div>
           </div>
+          <div>
+     <ul class="list-unstyled">
+     <li class="media my-4">
+    <img class="mr-3" src="assets/images/africafab.png" alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1"></h5>
+      Each part of Africa has a specific type of Fabric that is worn in each country.
+    </div>
+  </li>
+  
   <hr class="my-4">
   <p>
-          <h5> African fabric. 
+          <h5><strong> African fabric.</strong> 
 Each part of Africa has a specific type of Fabric that is worn in each country.
 In the West African, and Central Africa they have a specific fabric like sarong, 
 often worn by women and wrapped around the chest or waist, over the head as a headscarf,
  or as a baby sling. Kitenges are like kangas and kikoy but are of a thicker cloth and have 
  an edging along each side
          </h5>
-On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the below sites </p>
-          <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-              <a class="pr-3" href="designs.html">Design</a></button>
-               <a class="pr-3" href="designs.html">Artifacts</a></button>
+<em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the below sites</em>
+            <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+              <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
+               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
 
         </div>
      </div>
@@ -74,7 +84,7 @@ On occasions and in many ways either symbolically or for practical reasons. Afri
       <div class="media text-left mt-3">
           <img class="mr-3" src="assets/images/africa.jpeg" class="rounded mx-auto d-block"alt="Generic placeholder image" id="africa">
           <div class="media-body">
-          <h5 class="mt-0">Design</h5>
+          <h5 class="mt-0"><stron>Design</strong></h5>
           <p class="card-text">African fabric. 
                            Each part of Africa has a specific type of Fabric that is worn in each country.
                           In the West African, and Central Africa they have a specific fabric like sarong,
@@ -90,7 +100,7 @@ On occasions and in many ways either symbolically or for practical reasons. Afri
          <a>
         <img src="assets/images/wall.jpg" class="rounded mx-auto d-block"alt="Generic placeholder image h-150 w-100" id="">
       </a>
-        <h5 class="mt-0">Artifacts</h5>
+        <h5 class="mt-0"><strong>Artifacts</strong></h5>
         <div class="card-body">
                                        <h5 class="card-title">Art work</h5>
                                            <p class="card-text">The printing on the cloth is done by a traditional batik technique. 
@@ -104,6 +114,13 @@ On occasions and in many ways either symbolically or for practical reasons. Afri
     </div>
   </div>
 </div>
+</div>
+
+             <div row>
+             <div col>
+            <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+            </div>
+             </div>
 
 </section>
 <footer class="footer container-fluid">
@@ -131,10 +148,7 @@ On occasions and in many ways either symbolically or for practical reasons. Afri
            </li>
          </ul>
       </div>
-</footer>    
-<a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-   </div>
-   
+</footer> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
