--- a/designs.html
+++ b/designs.html
@@ -54,47 +54,74 @@
                </div>
           </div>
           <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-               <button type="radio-button" class="btn btn-secondary">Design</button>
-                    <a class="radio-button" href="gallery.html"></a>
-                <button type="button" class="btn btn-secondary">Artifacts</button>
-                    <a class="radio-button" href="gallery.html"></a>
+               <a><button type="radio-button" class="btn btn-secondary" target="_blank" href="design.html">Design</button></a>
+                <a><button type="button" class="btn btn-secondary" traget="_blank" href="artifacts.html">Artifacts</button></a>
+                    
         </div>
      </div>
- </div>
-            <ul class="list-unstyled">
-  <li class="media">
+ </div><div>
+     <ul class="list-unstyled">
+     <li class="media my-4">
     <img class="mr-3" src="assets/images/d1.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <h5 class="mt-0 mb-1"> Batik fabrics</h5>
+      This image shows diffent types of fabric prints.
+     In the Eastern part of Africa call it is Chitenge/ Kitenge. 
+    Kenya, Uganda, Tanzania, Sudan, In the western part of Africa wear Ankara. 
+    Nigeria, Cameroon, Ghana, Senegal, Liberia, Rwanda, and Democratic Republic of the Congo.
+
+    </div>
+  </li>
+  <li class="media">
+    <img class="mr-3" src="assets/images/d2.png" alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Early stages of batik fabric</h5>
+      In this image we see women in the village preparing color that will be used to print the batik fabric.
     </div>
   </li>
   <li class="media my-4">
-    <img class="mr-3" src="assets/images/d2.png" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
-  </li>
-  <li class="media">
     <img class="mr-3" src="assets/images/d3.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <h5 class="mt-0 mb-1">Clothe designs</h5>
+     On occasions and in many ways either symbolically or for practical reasons. 
+     Chitenges are used in different settings to convey messages. The following list 
+     demonstrates uses of the cloths. 
     </div>
   </li>
   <li class="media">
-    <img class="mr-3" src="assets/images/4.png" alt="Generic placeholder image">
+    <img class="mr-3" src="assets/images/d4.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <h5 class="mt-0 mb-1">Gifts</h5>
+      They can also be used to create modern  gifts to young women such as jewellery.	
     </div>
   </li>
   <li class="media">
-    <img class="mr-3" src="assets/images/d3.png" alt="Generic placeholder image">
+    <img class="mr-3" src="assets/images/d5.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <h5 class="mt-0 mb-1">Hand bags</h5>
+      This same fabric can be used to design women handbags.
+    </div>
+  </li>
+  <li class="media">
+    <img class="mr-3" src="assets/images/sling.jpg" alt="Generic placeholder image">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Baby's Sling</h5>
+      They are used as a sling to hold a baby across the back of a mother. 
+      They can hold the baby at the front as well, particularly when breast feeding. 
+      sometimes worn by men but often worn by women and wrapped around the chest or 
+      waist, over the head as a headscarf, or as a baby sling
+  </li>
+
+  <li class="media">
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Home decorations</h5>
+      <li class="media my-4">
+    <img class="mr-3" src="assets/images/art2.jpg" alt="Jewellery">
+    <img class="mr-3" src="assets/images/art3.JPG" alt="stool">
+    <img class="mr-3" src="assets/images/art4.JPG" alt="wall hanging">
+    <img class="mr-3" src="assets/images/art5.JPG" alt="safari">
+    <img class="mr-3" src="assets/images/art7.JPG" alt="Ladies bag">
+
     </div>
   </li>
 </ul>
