--- a/product.html
+++ b/product.html
@@ -23,10 +23,32 @@
   </a>
    </nav>
     </h1>
+<div>
+<div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+              <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
+               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
 
+        </div>
 
+<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="design.html.html" class="tooltip-test" title="Tooltip">Fabric</a>
 
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+ <ul class="list-unstyled">
+     <li class="media my-4">
+       <img class="mr-3" src="assets/images/art2.JPG" alt="products">
+        <img class="mr-3" src="assets/images/art3.JPG" alt="products">
+         <img class="mr-3" src="assets/images/art4.JPG" alt="products">
+          <img class="mr-3" src="assets/images/art5.JPG" alt="products">
+           <img class="mr-3" src="assets/images/art7.JPG" alt="products">
+            <img class="mr-3" src="assets/images/wall.jpg" alt="products">
+             <img class="mr-3" src="assets/images/wall3.JPG" alt="products">
+              <img class="mr-3" src="assets/images/wallart.JPG" alt="products">
+               <img class="mr-3" src="assets/images/wall5.JPG" alt="products">
+         <div class="media-body">
+        <h5 class="mt-0 mb-1"></h5>
+      </li>
+</ul>
+</div>
+
     <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
