--- a/artifacts.html
+++ b/artifacts.html
@@ -39,51 +39,53 @@
     <div class="col">
 
       <div class="col">
-     <nav class=" row col navbar navbar-light bg-light">
+     <nav class=" navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
    </nav>
       <div>
-        <h1 class="card-title">About us</h1>
+        <h1 class="card-title">Products</h1>
            <div class="button"> 
-                  <a href="index.html" target="_blank">Home</a>
-                   <a href="products.html" target="_blank">Products</a>
-                   <a href="gallery.html" target="_blank">Gallery</a>
-                   <a href="contact.html" target="_blank">Contact us</a>
+                  <a href="index.html" target="_blank" alt="home page">Home</a>
+                   <a href="product.html" target="_blank"alt="Product page">Products</a>
+                   <a href="gallery.html" target="_blank"alt="Gallery page">Gallery</a>
+                   <a href="contact.html" target="_blank"alt="Contact page">Contact us</a>
                </div>
           </div>
-          <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-               <button type="radio-button" class="btn btn-secondary">Design</button>
-                    <a class="radio-button" href="products.html"></a>
-                <button type="button" class="btn btn-secondary">Artifacts</button>
-                    <a class="radio-button" href="gallery.html"></a>
+               <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+              <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
+               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
+
         </div>
-     </div>
  </div>
+<div>
      <ul class="list-unstyled">
-  <li class="media">
-    <img class="mr-3" src="assets/images/" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+     <div class="media-body">
+      <h5 class="mt-0 mb-1">Wall Art</h5>
+      This image shows different types of man made wall art.
+
     </div>
-  </li>
-  <li class="media my-4">
-    <img class="mr-3" src="assets/images/" alt="Generic placeholder image">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-    </div>
+     <li class="media my-4">
+    <img class="mr-3" src="assets/images/wall.jpg" alt="mixedart">
+    <img class="mr-3" src="assets/images/wallart.jpg" alt="mansai lady and kids">
+    <img class="mr-3" src="assets/images/wall3.JPG" alt="manyatta">
+    <img class="mr-3" src="assets/images/wall5.JPG" alt="safari">
+    <img class="mr-3" src="assets/images/wall4.JPG" alt="drums">
+
   </li>
   <li class="media">
-    <img class="mr-3" src="assets/images/" alt="Generic placeholder image">
+    <img class="mr-3" src="assets/images/d2.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">List-based media object</h5>
-      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <h5 class="mt-0 mb-1">Women in the Village</h5>
+      In this image we see women in the village preparing color that will be used to print the batik fabric.
+    </div>
     </div>
   </li>
 </ul>
+</div>
+<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+
 <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
@@ -110,7 +112,8 @@
          </ul>
       </div>
 </footer>        
-<a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
+<a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> 
+ <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
    </div>
    
     <!-- Optional JavaScript -->
