--- a/index.html
+++ b/index.html
@@ -31,16 +31,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   
-<span><a href="gallery.html" class="tooltip-test" title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> and <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
+<span><a href="gallery.html" class="tooltip-test" title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
 <div class="jumbotron">
   <h1 class="display-4">Mama Afrika</h1>
   <p class="lead">Africa designers</p>
   <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
  
-</div>
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-</div></span>
-
  <footer class="footer col container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
