resize images and polish the pages

--- a/artifacts.html
+++ b/artifacts.html
@@ -15,6 +15,7 @@
     <title>Mama Afrika!</title>
   </head>
     <body>
+    <div class="grid-container">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -22,18 +23,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
-
-
-
-
-
-
     <title>Mama Afrika</title>
      <a class="pr-3" href="#"></a>
   </head>
   <body>
   <section>
-<div class="row container-fluid">
+<div class="row container-fluid inline-block">
 <!-- Just an image -->
 <div class="row">
     <div class="col">
@@ -45,36 +40,22 @@
    </a>
    </nav>
       <div>
-        <h1 class="card-title">Products</h1>
+        <h1 class="card-title inline-block">Products</h1>
            <div class="button"> 
-                  <a href="index.html" target="_blank" alt="home page">Home</a>
-                   <a href="product.html" target="_blank"alt="Product page">Products</a>
-                   <a href="gallery.html" target="_blank"alt="Gallery page">Gallery</a>
-                   <a href="contact.html" target="_blank"alt="Contact page">Contact us</a>
+                  <a href="index.html" target="_blank" alt="home page" class="inline-block">Home</a>
+                   <a href="product.html" target="_blank"alt="Product page" class="inline-block">Products</a>
+                   <a href="gallery.html" target="_blank"alt="Gallery page" class="inline-block">Gallery</a>
+                   <a href="contact.html" target="_blank"alt="Contact page" class="inline-block">Contact us</a>
                </div>
           </div>
-               <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-              <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
-               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
+               <div class="btn-group inline-block" role="group" aria-label="Button group with nested dropdown">
+              <a class="pr-3 inline-block" href="designs.html"><strong>Design</strong></a></button>
+               <a class="pr-3 inline-block" href="designs.html"><strong>Artifacts</strong></a></button>
 
         </div>
  </div>
-<div>
-     <ul class="list-unstyled">
-     <div class="media-body">
-      <h5 class="mt-0 mb-1">Wall Art</h5>
-      This image shows different types of man made wall art.
-
-    </div>
-     <li class="media my-4">
-    <img class="mr-3" src="assets/images/wall.jpg" alt="mixedart">
-    <img class="mr-3" src="assets/images/wallart.jpg" alt="mansai lady and kids">
-    <img class="mr-3" src="assets/images/wall3.JPG" alt="manyatta">
-    <img class="mr-3" src="assets/images/wall5.JPG" alt="safari">
-    <img class="mr-3" src="assets/images/wall4.JPG" alt="drums">
-
-  </li>
-  <li class="media">
+ <div class="inline-block">
+  <li class="media inline-block">
     <img class="mr-3" src="assets/images/d2.png" alt="Generic placeholder image">
     <div class="media-body">
       <h5 class="mt-0 mb-1">Women in the Village</h5>
@@ -82,9 +63,21 @@
     </div>
     </div>
   </li>
+<div>
+     <ul class="list-unstyled inline-block">
+     <div class="media-body">
+      <h5 class="mt-0 mb-1">Wall Art</h5>
+      This image shows different types of man made wall art.
+
+    </div>
+     <li class="media my-4 inline-block">
+    <img class="mr-3 inline-block" src="assets/images/wall.jpg" alt="mixedart">
+    <img class="mr-3 inline-block" src="assets/images/wallart.1.jpg" alt="masai lady and kids">
+    <img class="mr-3 inline-block" src="assets/images/wall3.1.jpg" alt="manyatta">
+    <img class="mr-3 inline-block" src="assets/images/wall5.1.jpg" alt="safari">
+  </li>
 </ul>
 </div>
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
 
 <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
@@ -112,15 +105,10 @@
          </ul>
       </div>
 </footer>        
-<a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> 
- <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-   </div>
-   
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
-
 </html>
