--- a/designs.html
+++ b/designs.html
@@ -45,15 +45,14 @@
    </a>
    </nav>
       <div>
-        <h1 class="card-title">About us</h1>
-           <div class="button"> 
+           <div class="button flex-container"> 
                   <a href="index.html" target="_blank">Home</a>
-                   <a href="products.html" target="_blank">Products</a>
+                   <a href="product.html" target="_blank">Products</a>
                    <a href="gallery.html" target="_blank">Gallery</a>
                    <a href="contact.html" target="_blank">Contact us</a>
                </div>
           </div>
-          <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+          <div class="btn-group flex-container" role="group" aria-label="Button group with nested dropdown">
                <a><button type="radio-button" class="btn btn-secondary" target="_blank" href="design.html">Design</button></a>
                 <a><button type="button" class="btn btn-secondary" traget="_blank" href="artifacts.html">Artifacts</button></a>
                     
@@ -103,7 +102,7 @@
     </div>
   </li>
   <li class="media">
-    <img class="mr-3" src="assets/images/sling.jpg" alt="Generic placeholder image">
+    <img class="mr-3" src="assets/images/sling1.jpg" alt="Generic placeholder image">
     <div class="media-body">
       <h5 class="mt-0 mb-1">Baby's Sling</h5>
       They are used as a sling to hold a baby across the back of a mother. 
@@ -111,24 +110,10 @@
       sometimes worn by men but often worn by women and wrapped around the chest or 
       waist, over the head as a headscarf, or as a baby sling
   </li>
-
-  <li class="media">
-    <div class="media-body">
-      <h5 class="mt-0 mb-1">Home decorations</h5>
-      <li class="media my-4">
-    <img class="mr-3" src="assets/images/art2.jpg" alt="Jewellery">
-    <img class="mr-3" src="assets/images/art3.JPG" alt="stool">
-    <img class="mr-3" src="assets/images/art4.JPG" alt="wall hanging">
-    <img class="mr-3" src="assets/images/art5.JPG" alt="safari">
-    <img class="mr-3" src="assets/images/art7.JPG" alt="Ladies bag">
-
-    </div>
-  </li>
 </ul>
 <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
-        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
