--- a/gallery.html
+++ b/gallery.html
@@ -20,22 +20,35 @@
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
   </a>
    </nav>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    </h1>
-
-<div id="link">video</div>
-
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">Mama Afrika</button>
-            </div>
-            <div class="modal-body">
-             <iframe class="align-self-center mr-3" width="570" height="315" src="https://www.youtube.com/embed/JqDzMN9n1DI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+     <div class="inline-block">
+      <h2>fabric designs</h2>
+   </div> 
+<div>
+        <div>
+            <div>
+                <img src="assets/images/d1.png" alt="fabric" width="500" height="333"> 
+                 <img src="assets/images/d3.png" alt="fabric" width="500" height="333">        
             </div>
         </div>
+
+        <div>
+              <div>
+                 <img src="assets/images/smcd5-001.jpg" alt="fabric" width="500" height="333">
+                 <img src="assets/images/sncd6.jpg" alt="fabric" width="500" height="333">
+                 <img src="assets/images/smcd9-001.jpg" alt="fabric" width="500" height="333">
+                 <img src="assets/images/smcd7.jpg" alt="fabric " width="500" height="333">
+              </div>
+     </div>
+</div>
+
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Hear you will see a video of the Masaai Dancing wearing their cultural clothes</button>
+
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/IiGKIwvpQrw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 </div>
 <footer class="footer container-fluid">
    <div id="footer-details" class="row">   
@@ -62,9 +75,10 @@
            </li>
          </ul>
       </div>
+
+
+
 </footer>    
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-   </div></span>
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
