--- a/product.html
+++ b/product.html
@@ -26,11 +26,9 @@
 <div>
 <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
               <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
-               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
+               <a class="pr-3" href="artifacts.html"><strong>Artifacts</strong></a></button>
 
         </div>
-
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="design.html.html" class="tooltip-test" title="Tooltip">Fabric</a>
 
  <ul class="list-unstyled">
      <li class="media my-4">
@@ -83,7 +81,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 </footer>    
-<span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> and <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-   </div></span>
 </body>
 </html>
