--- a/about.html
+++ b/about.html
@@ -38,23 +38,15 @@
 <div class="row">
     <div class="col">
 
-<div class="col ">
+<div class="col inline-block">
      <nav class=" row  navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="80" height="80" alt="" loading="lazy" id="mama">
    </a>
    </nav>
       <div>
-        <h1 class="card-title bg-color-button "><strong>About us</strong></h1>
-           <div class="button"> 
-                  <a href="index.html" target="_blank"><strong>Home</strong></a>
-                   <a href="products.html" target="_blank"><strong>Products</strong></a>
-                   <a href="gallery.html" target="_blank"><strong>Gallery</strong></a>
-                   <a href="contact.html" target="_blank"><strong>Contact us</strong></a>
-               </div>
-          </div>
-          <div>
-     <ul class="list-unstyled">
+     
+     <ul class="list-unstyled inline-block">
      <li class="media my-4">
     <img class="mr-3" src="assets/images/africafab.png" alt="Generic placeholder image">
     <div class="media-body">
@@ -63,30 +55,18 @@
     </div>
   </li>
   
-  <hr class="my-4">
+  <hr class="my-4 inline-block">
   <p>
-          <h5><strong> African fabric.</strong> 
-Each part of Africa has a specific type of Fabric that is worn in each country.
-In the West African, and Central Africa they have a specific fabric like sarong, 
-often worn by women and wrapped around the chest or waist, over the head as a headscarf,
- or as a baby sling. Kitenges are like kangas and kikoy but are of a thicker cloth and have 
- an edging along each side
-         </h5>
 <em>On occasions and in many ways either symbolically or for practical reasons. African fabric are used in different way. This information can be accessed in the below sites</em>
-            <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-              <a class="pr-3" href="designs.html"><strong>Design</strong></a></button>
-               <a class="pr-3" href="designs.html"><strong>Artifacts</strong></a></button>
-
-        </div>
+</p>
      </div>
  </div>
 <div>
-      <div class="media text-left mt-3">
+      <div class="media text-left mt-3 inline-block">
           <img class="mr-3" src="assets/images/africa.jpeg" class="rounded mx-auto d-block"alt="Generic placeholder image" id="africa">
           <div class="media-body">
-          <h5 class="mt-0"><stron>Design</strong></h5>
-          <p class="card-text">African fabric. 
-                           Each part of Africa has a specific type of Fabric that is worn in each country.
+           <h5 class="mt-0 card-title"><strong>African fabric</strong></h5>
+                         <p>  Each part of Africa has a specific type of Fabric that is worn in each country.
                           In the West African, and Central Africa they have a specific fabric like sarong,
                           often worn by women and wrapped around the chest or waist, over the head as a 
                           headscarf, or as a baby sling. Kitenges are like kangas and kikoy but are of a
@@ -98,11 +78,10 @@ often worn by women and wrapped around the chest or waist, over the head as a he
       <div class="media-body">
         <a class="pr-3" href="atifacts.html">
          <a>
-        <img src="assets/images/wall.jpg" class="rounded mx-auto d-block"alt="Generic placeholder image h-150 w-100" id="">
+        <img src="assets/images/wall.jpg" class="rounded mx-auto d-block"alt="Generic placeholder image h-300 w-100" id="">
       </a>
-        <h5 class="mt-0"><strong>Artifacts</strong></h5>
-        <div class="card-body">
-                                       <h5 class="card-title">Art work</h5>
+        <div class="card-body inline-block">
+                                       <h5 class="mt-0 card-title"><strong>Art work</strong></h5>
                                            <p class="card-text">The printing on the cloth is done by a traditional batik technique. 
                                            These are known as wax prints and the design is equally as bright and detailed on the 
                                            obverse side of the fabric that can also be framed or otherwise hung up on the wall as 
@@ -115,15 +94,8 @@ often worn by women and wrapped around the chest or waist, over the head as a he
   </div>
 </div>
 </div>
-
-             <div row>
-             <div col>
-            <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a></span> <span><a href="fabric.html.html" class="tooltip-test" title="Tooltip">Africa Fabric</a>
-            </div>
-             </div>
-
 </section>
-<footer class="footer container-fluid">
+<footer class="footer inline-block container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
         <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
