--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   
-<span><a href="gallery.html" class="tooltip-test" title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
+<span><a href="gallery.html"  title="Tooltip">Gallery</a></span><span><a href="product.html" class="tooltip-test" title="Tooltip">Products</a></span> <span><a href="contact.html" class="tooltip-test" title="Tooltip">Contact us</a>
 <div class="jumbotron">
   <h1 class="display-4">Mama Afrika</h1>
   <p class="lead">Africa designers</p>
   <a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more</a>
  
- <footer class="footer col container-fluid">
+ <footer class="footer col inline-block container-fluid">
    <div id="footer-details" class="row">   
       <div class="col-md-6 col-sm-4">
-        <span><h5 class="uppercase general-sub no-gutter uppercase">SOCIAL</h5></span>
          <ul class="list-inline social-links">
            <li class="list-inline-item">
               <a target="_blank" href="https://www.facebook.com/Kitenge-111914593983140">
