modify the pages

--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <title>Mama Afrika!</title>
   </head>
   
-     <body>
+     <body class=" .media-breakpoint-up(sm)  .media-breakpoint-down(md)">
  <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="index.html">
     <img src="assets/images/mamam.png" width="30" height="30" alt="" loading="lazy" class="images">
@@ -41,7 +41,7 @@
      </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Hear you will see a video of the Masaai Dancing wearing their cultural clothes</button>
+<button type="button" class="btn btn-primary{back-ground:orange;}"data-toggle="modal" data-target=".bd-example-modal-sm">Hear you will see a video of the Masaai Dancing wearing their cultural clothes</button>
 
 <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
